# muffin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  tiny_obj_loader.h  vcpkg.json
muffin/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderObject.cpp  RenderObject.h  Renderable.h  Renderer.cpp  Renderer.h  Scene.h
muffin/backends/vk/: CMakeLists.txt  RHI.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanRHI.cpp  VulkanRHI.h
muffin/editor/: CMakeLists.txt  ImGuiRenderer.cpp  ImGuiRenderer.h
muffin/graphics/: CMakeLists.txt  Material.h  Mesh.h  RenderObject.h  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp
muffin/graphics/rhi/: RHI.h
muffin/graphics/rhi/vulkan/: RHI.cpp  RHI.h  VulkanBuffer.cpp  VulkanCommandList.cpp  VulkanCommandPool.h  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRHI.cpp  VulkanRHI.h  VulkanRenderTarget.h  VulkanSampler.h  VulkanShader.cpp  VulkanShader.h
muffin/rhi/: RHI.h
muffin/rhi/vulkan/: CMakeLists.txt  RHI.cpp  RHI.h  Shared.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommandPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanRHI.cpp  VulkanRHI.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShader.h  VulkanWindow.cpp  VulkanWindow.h
shaders/: imgui.vert  shader.vert
